# electricitymaps-contrib

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .vscode  CNAME  CO2eq Model Explanation.ipynb  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Carbon emission per energy source  DATA_SOURCES.md  Dockerfile  EMISSION_FACTORS_SOURCES.md  Earthfile  LICENSE  LICENSE.txt  LICENSE_MIT.txt  Makefile  PARSERS_MISSING_SNAPSHOT_TESTS.md  Procfile  README.it.md  README.md  __init__.py  add-delays-to-eia-zones.js  capacity_update.py  circle.yml  code_of_conduct.md  common.yml  docker-compose.yml  flake.nix  hydroquebec_consumption.json  index.html  jest.config.js  notebook.ipynb  package-lock.json  package.json  (+17 more)
.circleci/: config.yml  continue_conf.yml  continue_config.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  auto-merge.yml  codeql-config.yml  dependabot.yml  dependabot.yml.bk  filter-groups.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: add-contact-details-of-a-potential-data-owner.md  blank-issue.md  config.yml  data-for-country-x.md  data-issue.yml  frontend-bug-report.md
.github/new-workflows-to-be-enabled/: codeql-analysis.yml  test.yml
.github/old-workflows/: CI.yml  codeql.yml  eslint.yml  jsonlint.yml  label.yml  prettier.yml
.github/workflows/: CI.yml  README.md  automerge.yml  autosquash.yml  branch-preview.yml  codeql.yml  create-release.yml  cypress.yml  jest.yml  (+29 more)
.husky/: pre-commit
api/: Dockerfile  package.json  server.js
app/: .gitignore  README.md  config.xml  countrymap.js  countrytable.js  exchangelayer.js  horizontalcolorbar.js  main.js  package.json
backend/: feeder.py  requirements.txt  server.py
config/: 2022-08-11 regional emission factors - Links.csv  2022-08-11 regional emission factors - direct.csv  2022-08-11 regional emission factors - upstream.csv  Earthfile  add_emission_factors.py  capacities.json  co2eq_parameters.js  co2eq_parameters.json  co2eq_parameters.test.js  co2eq_parameters_all.json  co2eq_parameters_direct.json  co2eq_parameters_direct_global.json  co2eq_parameters_lifecycle.json  defaults.yaml  exchanges.json  exchanges.schema.json  graph_zones.py  modes.json  zone_names.json  zones.json  zones.schema.json
datascience/: CO2 hourly profile.ipynb  CO2.ipynb  Exchange.ipynb  README.md  Wind and Solar.ipynb  computeco2.js  example.ipynb  exchange.ipynb  price and carbon intensity.ipynb  renewables.ipynb  requirements.txt  utils.py
feeder/: Dockerfile  feeder.py  migrate_db.py  package.json  push_cache.js  requirements.txt
geo/: README.md  generate-zone-geo.ts  package.json  world.geojson
libs/types/: pyproject.toml
libs/types/src/electricitymap/: __init__.py
libs/types/src/electricitymap/contrib/types/: __init__.py  atc_type.py  market_agreement_type.py
mobileapp/: .gitignore  BUILD.yaml  Gemfile  README.md  build.sh  capacitor.config.ts  config.xml  electricitymap.keystore  generate-index.js  package-lock.json  package.json  pnpm-lock.yaml  sentry.properties  tsconfig.node.json
mobileappz/: capacitor.config.ts  package.json  pnpm-lock.yaml
mockserver/: Dockerfile  README.md  generate_mock_data.js  minimize-files.js  package-lock.json  package.json  pnpm-lock.yaml  server.js  server.py  update_state.py
parsers/: ADME.py  AEMO.py  AL.py  AM.py  AR.py  AT.py  AU-LH.py  AU-WA.py  AU.py  AUS-TAS-KI.py  AUS_TAS_KI.py  AU_OPEN_ELECTRICITY.py  AU_TAS_KI.py  AU_WA.py  AW.py  AX.py  AX_NEW.py  BB.py  BD.py  BG.py  BG_parser.py  BO-enhanced.py  BO.py  BORNHOLM_POWERLAB.py  BR.py  CA-NL-NF.py  CAMMESA.py  CA_AB.py  CA_BC.py  CA_NB.py  CA_NL_NF.py  CA_NS.py  CA_ON.py  CA_PE.py  CA_QC.py  CA_SK.py  CA_YT.py  CEB.py  CENACE.py  CH.py  (+162 more)
public/: index.html  style.css
scripts/: EMBER_capacity_update.py  ENTSOE_capacity_update.py  US_production_update.py  aggregate_france_territories.py  co2.js  co2eq.js  colorbar.js  countrymap.js  countrytable.js  create_aggregated_zone_config.py  exchangelayer.js  horizontalcolorbar.js  probe_entsoe_a09_borders.py  remove_escaped_quotes_in_locales.py  remove_flag_file_name.py  remove_zone.py  tooling.py  update_capacity_configuration.py  update_capacity_ember_all_years.py  update_data_sources.py  update_emission_factors_sources.py  utils.py  validate_config_filenames.py  windy.js  zone_names.py
server/: feeder.py  requirements.txt  server.py
shared/: co2eq.js  co2eq_parameters.js  database.js  fossilfuels.js
tests/: test_BB_integration.py  test_BB_parser.py  test_arrows.py  test_capacity.py  test_co2eq_parameters.py  test_config.py  test_config_model.py  test_config_zones.py  test_exchanges_json.py  test_getZone.py  test_integration.py  test_parser_interface.py  test_parser_outputs.py  test_update_capacity_configuration.py  test_zones_json.py
transparency-page/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
utils/: ENTSOE_capacity_update.py  config.py  parsers.py  update_capacities_entsoe.py
validators/: sanity_checks.py  zone_specific_checks.py
web/: .babelrc  .dockerignore  .earthlyignore  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.js  .prettierrc.json  .stylelintrc.json  .yarnrc  BUILD.yaml  Dockerfile  Earthfile  LICENSE  README.md  bun.lockb  bunfig.toml  cypress.config.js  cypress.config.ts  cypress.json  generate-arrow.js  generate-arrows.js  generate-contributor-list.js  generate-geometries.js  generate-locales-list.js  generate-translations.js  generate-zone-bounding-boxes.js  generate-zones-config.js  generate-zones-config.ts  generate_geometries.js  getBoundingBoxes.js  index.html  locales-config.json  package-lock.json  package.json  pnpm-lock.yaml  (+16 more)
web-new/: .eslintcache
web-old/: README.md  generate-arrows.js  generate-contributor-list.js  generate-zones-config.js  jest.config.js  translation-helper.js  translation-status.js
webz/: .eslintrc.json  .prettierrc.json  README.md  cypress.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
(+4673 files in other folders)
