[project]
name = "electricitymap-contrib"
version = "1.5.0"
description = ""
authors = [{ name = "Electricity Maps", email = "app@electricitymaps.com" }]
requires-python = ">= 3.10, < 3.14"
license = "AGPL-3.0-or-later"
dependencies = [
    "electricitymap-contrib-types",
    "pydantic>=1.10.17,<2",
    "PyYAML>=6.0,<7",
    "ruamel-yaml>=0.17.24,<0.18",
    "tzdata>=2025.2,<2026",
    "numpy>=1.24.4,<2",
]

[project.scripts]
test-parser = "test_parser:test_parser"
test_parser = "test_parser:test_parser"
capacity_update = "capacity_update:capacity_update"
check = "scripts.tooling:check"
format = "scripts.tooling:format"
lint = "scripts.tooling:lint"
test = "scripts.tooling:test"

[tool.uv.workspace]
members = [".", "libs/types"]

[tool.uv]
required-version = ">=0.9, <0.10"
# The electricitymaps index is for consumers of the published package.
# For local development, workspace sources take precedence.
index = [
    { name = "pypi", url = "https://pypi.org/simple/", default = true },
    { name = "electricitymaps", url = "https://europe-west1-python.pkg.dev/tmrow-152415/libs/simple/", explicit = true },
]

# For local development, the workspace member takes precedence.
# When published, consumers will use the index above.
[tool.uv.sources]
electricitymap-contrib-types = { workspace = true }

[project.optional-dependencies]
parsers = [
    "beautifulsoup4~=4.6.0",
    "demjson3>=3.0.5,<4",
    "imageio>=2.18.0,<3",
    "lxml>=4.9.1,<5",
    "pandas>=1.5, <3",
    "pytesseract==0.2.0",
    "requests~=2.32.2",
    "opencv-python==4.8.1.78",
    "xlrd>=2.0.1,<3",
    "freezegun>=0.3.15,<0.4",
    "signalr-client-threads~=0.0.12",
    "openpyxl>=3.1.2,<4",
    "pydataxm>=0.3.2,<0.4",
    "pycountry>=22.3.5,<23",
    "odfpy>=1.4.1,<2",
]

[dependency-groups]
dev = [
    "ruff==0.11.2",
    "pytest>=7.4.0,<8",
    "syrupy>=4.8.0,<5",
    "requests-mock~=1.3.0",
    "testfixtures>=7.0.0,<8",
    "click>=8.0.0,<9",
]

scripts = ["xmltodict>=0.13.0,<0.14"]

[tool.hatch.build.targets.sdist]
include = [
    "electricitymap",
    "config",
]
exclude = [
    "**/tests",
    "**/test_*.py",
    "tests",
    "test_parser.py",
    "capacity_update.py",
    "**/*.java",
]

[tool.hatch.build.targets.wheel]
include = [
    "electricitymap",
    "config",
]
exclude = [
    "**/tests",
    "**/test_*.py",
    "tests",
    "test_parser.py",
    "capacity_update.py",
    "**/*.java",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
testpaths = [
  "tests",
  "electricitymap/contrib/parsers/tests",
  "electricitymap/contrib/parsers/lib/tests",
  "electricitymap/contrib/capacity_parsers/tests",
  "electricitymap/contrib/lib/tests",
]
addopts = "--color=yes --durations=10"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "electricitymap/contrib/parsers/archived",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "UP",
  "I",
  "DTZ003",
  "DTZ004",
  "B",
  "A",
  "C4",
  "SIM",
]
ignore = [
  "B008", # This flags every parser we have, let's ignore it for now
  "B017", # TODO: Fix this
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["electricitymap"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
