[project]
name = "electricitymap-types"
version = "0.1.0"
description = "Type definitions for Electricity Maps"
authors = [{ name = "Electricity Maps", email = "app@electricitymaps.com" }]
requires-python = ">= 3.10, < 3.14"
license = "AGPL-3.0-or-later"
dependencies = [
    "pydantic>=1.10.17,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/electricitymap",
]
exclude = [
    "**/tests",
    "**/test_*.py",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/electricitymap",
]
exclude = [
    "**/tests",
    "**/test_*.py",
]
packages = ["src/electricitymap"]
